[project]
name = "5g"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dspy>=3.0.3",
    "fastapi>=0.116.2",
    "kuzu>=0.11.2",
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
    "pytest-cov>=7.0.0",
    "redis>=6.4.0",
    "requests>=2.32.5",
]
