[project]
name = "5g"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "chromadb>=1.3.5",
    "dspy>=3.0.3",
    "fastapi>=0.116.2",
    "ijson>=3.4.0.post0",
    "langchain-community>=0.4.1",
    "logger>=1.4",
    "neo4j>=6.0.3",
    "paperscraper>=0.3.3",
    "preprocess>=2.0.0",
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
    "pytest-cov>=7.0.0",
    "ray>=2.52.0",
    "redis>=6.4.0",
    "requests>=2.32.5",
    "sentence-transformers>=5.1.2",
    "unstructured>=0.18.21",
]
